--- a/app/views/graphs/update.js.erb
+++ b/app/views/graphs/update.js.erb
@@ -1,1 +1,1 @@
-addMessagesToDiv($('#global-messages'), '<%= escape_javascript flash_messages %>');
+addMessagesToDiv($('#container'), '<%= escape_javascript flash_messages %>');
