--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,6 +12,6 @@
   </div>
 
   <div>
-    <%= f.button :submit, 'Save project'%>
+    <%= f.button :submit, 'Save Project' ,:class=>"btn"%>
   </div>
 <% end %>
