--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -1,20 +1,28 @@
-<table class="table table-striped">
+<table class="table table-striped table-bordered table-condensed">
   <tr>
+    <th style="text-align: center;">#</th>
     <th>Environment Name</th>
-    <th>Actions</th>    
+    <th style="text-align: center;">Actions</th>
   </tr>
-
+<%  i=1 %>
+<%if @graphs.present? %>
 <% @graphs.each do |graph| %>
   <tr>
+    <td style="text-align: center;"><%= i %></td>
     <td><%= graph.name %></td>
-    <td><%= link_to 'Edit', edit_project_graph_path(@project,graph) %>&nbsp;&nbsp; | &nbsp;&nbsp;
-    <%= link_to 'Destroy', project_graph_path(@project,graph), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td style="text-align: center;"><%= link_to 'Edit', edit_project_graph_path(@project,graph),:class=>'btn' %>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= link_to 'Destroy', project_graph_path(@project,graph),:class=>'btn', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= link_to 'Deploy', '' ,:class=>'btn'%></td>
   </tr>
+  <% i += 1 %>
 <% end %>
+  <%else%>
+  <tr>
+    <td colspan="3" style="color: blue;">Sorry, No Environments to this Project.</td>
+  </tr>
+  <%end%>
 </table>
 
 <br />
 
-<%#= link_to 'New Environment', new_graph_path(:project => @project.id) %>
-<%= link_to 'New Environment', new_project_graph_path(@project) %>&nbsp;&nbsp; | &nbsp;&nbsp;
-<%= link_to 'Projects', projects_path %>
+<%= link_to 'New Environment', new_project_graph_path(@project) ,:class=>"btn"%>
