--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing project</h1>
-
+<h1>Edit Project</h1>
+<div style="float:right;"><%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
+<br/><br/>
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Show Project', @project ,:class=>"btn"%>
