--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,23 +1,34 @@
+<div style="float:right;"><%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
+<br/><br/>
 <p id="notice"><%= notice %></p>
-<h3><u><b><%= @project.name %></b></u></h3>
-<table>
-  <tr>
-    <td>Description :</td>
-    <td><%= @project.description %></td>
-  </tr>
-  <tr>
-    <td>Repository Type :</td>
-    <td><%= @project.repo_type %></td>
-  </tr><tr>
-    <td>Repository Path :</td>
-    <td><%= @project.repo_url %></td>
-  </tr><tr>
-    <td>Repository Auth :</td>
-    <td><%= @project.repo_auth %></td>
-  </tr>
-</table>
-
-<br/>
+<div style="background-color: lavender;">
+  <div style="margin-left: 10px;">
+<h3 style="float:left;text-decoration: underline;font-family: bold;"><%= @project.name %></h3>&nbsp;&nbsp;
+<%= link_to 'Edit', edit_project_path ,:class=>"btn" ,:style=>"float:none;margin-top:14px;"%>
+<br /><br />
+<div class="clear"></div>
+  <div>
+    <span style="display: inline-block;width: 115px;">Description</span>:
+    &nbsp;&nbsp;<span><%= @project.description %></span>
+  </div>
+  <br/>
+  <div>
+    <span style="display: inline-block;width: 115px;">Repository Type</span>:
+    &nbsp;&nbsp;<span><%= @project.repo_type %></span>
+  </div>
+  <br/>
+  <div>
+    <span style="display: inline-block;width: 115px;">Repository Path</span>:
+    &nbsp;&nbsp;<span><%= @project.repo_url %></span>
+  </div>
+  <br/>
+  <div>
+    <span style="display: inline-block;width: 115px;">Repository Auth</span>:
+    &nbsp;&nbsp;<span><%= @project.repo_auth %></span>
+  </div>
+  </div>
+  <br />
+</div>
 <h4>Environments</h4>
 
 <%= render 'project_environments' %>
