--- a/app/views/graphs/update.js.erb
+++ b/app/views/graphs/update.js.erb
@@ -1,1 +1,1 @@
-addMessagesToDiv($('#container'), '<%= escape_javascript flash_messages %>');
+showFlashMessages($('#container'), '','<%= escape_javascript flash_messages %>');
