--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -2,9 +2,9 @@
   <h1>Welcome, <%=current_user.name%></h1>
   <p>Go ahead, give VisualCloud a try</p>
   <p>
-    <%= link_to 'Try it!', new_graph_path , class: "btn btn-primary btn-large" %>
+    <%= link_to 'Try it!', new_environment_path , class: "btn btn-primary btn-large" %>
   </p>
   <p>
-    <%= link_to 'All Environments', graphs_path , class: "btn btn-primary btn-large" %>
+    <%= link_to 'All Environments', environments_path , class: "btn btn-primary btn-large" %>
   </p>
 </div>
