--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -1,28 +1,34 @@
 <table class="table table-striped table-bordered table-condensed">
   <tr>
     <th style="text-align: center;">#</th>
-    <th>Environment Name</th>
+    <th>Name</th>
+    <th>Branch</th>
+    <th>DB migrate</th>
     <th style="text-align: center;">Actions</th>
   </tr>
 <%  i=1 %>
-<%if @graphs.present? %>
-<% @graphs.each do |graph| %>
+<%if @environments.present? %>
+<% @environments.each do |environment| %>
   <tr>
     <td style="text-align: center;"><%= i %></td>
-    <td><%= graph.name %></td>
-    <td style="text-align: center;"><%= link_to 'Edit', edit_project_graph_path(@project,graph),:class=>'btn' %>&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Destroy', project_graph_path(@project,graph),:class=>'btn', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Deploy', '' ,:class=>'btn'%></td>
+    <td><%= environment.name %></td>
+    <td><%= text_field_tag 'branch' ,environment.branch, id: "branch_#{environment.id}" %></td>
+    <td><%= check_box_tag 'db_migrate','',environment.db_migrate, id: "db_migrate_#{environment.id}" %></td>
+    <td style="text-align: center;">
+    <%= link_to 'Update Environment', "javascript:void(0);",:class=>'btn save_env', id: "save_env_#{environment.id}"%>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= link_to 'Edit', edit_project_environment_path(@project,environment),:class=>'btn' %>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%#if Deploy.find_all_by_environment_id(environment).present? && Deploy.find_all_by_environment_id(environment).order('created_at DESC').status %>
+    <%= link_to 'Deploy', project_environment_deploys_path(@project,environment) ,:class=>'btn', method: :post%></td>
+    <%#end%>
   </tr>
   <% i += 1 %>
 <% end %>
   <%else%>
   <tr>
-    <td colspan="3" style="color: blue;">Sorry, No Environments to this Project.</td>
+    <td colspan="5" style="color: blue;">Sorry, No Environments to this Project.</td>
   </tr>
   <%end%>
 </table>
-
 <br />
-
-<%= link_to 'New Environment', new_project_graph_path(@project) ,:class=>"btn"%>
+<%= link_to 'New Environment', new_project_environment_path(@project) ,:class=>"btn"%>
