--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Project</h1>
-<div style="float:right;"><%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
+<div style="float:right;">
+<%= link_to 'Show Project', @project ,:class=>"btn"%>
+<%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
 <br/><br/>
 <%= render 'form' %>
-
-<%= link_to 'Show Project', @project ,:class=>"btn"%>
