--- a/app/views/environments/_edit_toolbar.html.erb
+++ b/app/views/environments/_edit_toolbar.html.erb
@@ -2,6 +2,7 @@
   <ul class="nav nav-pills">
     <li><a id="graph-update" data-graph-id="<%=@environment.id%>" href="javascript:void(0)">Save</a></li>
     <li><a id="graph-provision" data-graph-id="<%=@environment.id%>" href="javascript:void(0)">Provision</a></li>
+    <li><a id="graph-save" href="javascript:void(0)">Replicate</a></li>
   </ul> 
   <%= render 'project_environment' %> 
 </div>
