Ec2 code is placed,images added,components commented

--- a/app/assets/javascripts/default.js.erb
+++ b/app/assets/javascripts/default.js.erb
@@ -89,6 +89,7 @@ function hideLoading(){
 
 $(document).ready(function(){
    $("#container").notify({expires: false,speed: 1000});
+   $("[rel=tooltip]").tooltip();
 });
 
 /*
