--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -26,7 +26,7 @@
 <% end %>
   <%else%>
   <tr>
-    <td colspan="5" style="color: blue;">Sorry, No Environments to this Project.</td>
+    <td colspan="5" style="color: blue;">Sorry, No Environments in this Project.</td>
   </tr>
   <%end%>
 </table>
