renamed deploy to deployment in application

--- a/app/views/deployments/_form.html.erb
+++ b/app/views/deployments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@deploy) do |f| %>
+<%= simple_form_for(@deployment) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
