Show status of cloud stack

--- a/app/assets/javascripts/environment.js.erb
+++ b/app/assets/javascripts/environment.js.erb
@@ -61,3 +61,18 @@ $(document).ready(function(){
   });
 
 });
+
+
+$(function() {
+ if($('#stack-status').length != 0)
+ {
+  var environment_id = $("#stack-status").attr("data-graph-id");
+  setInterval(function(){
+    $.ajax({
+      url: '/environment_status?id='+environment_id,
+      type: 'GET'
+    });
+  }, 6000);
+ }
+});
+
