--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -1,33 +1,33 @@
 <table class="table table-striped table-bordered table-condensed">
   <tr>
-    <th style="text-align: center;">#</th>
+    <th style="text-align: center;">Status</th>
     <th>Name</th>
     <th>Branch</th>
     <th>DB migrate</th>
     <th style="text-align: center;">Actions</th>
   </tr>
-<%  i=1 %>
-<%if @environments.present? %>
-<% @environments.each do |environment| %>
-  <tr>
-    <td style="text-align: center;"><%= i %></td>
-    <td><%= environment.name %></td>
-    <td><%= text_field_tag 'branch' ,environment.branch, id: "branch_#{environment.id}" %></td>
-    <td><%= check_box_tag 'db_migrate','',environment.db_migrate, id: "db_migrate_#{environment.id}" %></td>
-    <td style="text-align: center;">
-    <%= link_to 'Update Environment', "javascript:void(0);",:class=>'btn save_env', id: "save_env_#{environment.id}"%>&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Edit', edit_project_environment_path(@project,environment),:class=>'btn' %>&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;
+  <%  i=1 %>
+  <%if @environments.present? %>
+    <% @environments.each do |environment| %>
+      <tr>
+        <td style="text-align: center;"><a id="stack-status" data-graph-id="<%=environment.id%>" href="javascript:void(0);"><%= environment.status(current_user.aws_access_key, current_user.aws_secret_key) %></a></td>
+        <td><%= environment.name %></td>
+        <td><%= text_field_tag 'branch' ,environment.branch, id: "branch_#{environment.id}" %></td>
+        <td><%= check_box_tag 'db_migrate','',environment.db_migrate, id: "db_migrate_#{environment.id}" %></td>
+        <td style="text-align: center;">
+          <%= link_to 'Update', "javascript:void(0);",:class=>'btn save_env', id: "save_env_#{environment.id}"%>&nbsp;&nbsp;&nbsp;&nbsp;
+          <%= link_to 'Edit', edit_project_environment_path(@project,environment),:class=>'btn' %>&nbsp;&nbsp;&nbsp;&nbsp;
+          <%= link_to 'Delete', project_environment_path(@project,environment),:class=>'btn', method: :delete, data: { confirm: 'Are you sure?' } %>&nbsp;&nbsp;&nbsp;&nbsp;
     <%#if Deploy.find_all_by_environment_id(environment).present? && Deploy.find_all_by_environment_id(environment).order('created_at DESC').status %>
-    <%= link_to 'Deploy', project_environment_deployments_path(@project,environment) ,:class=>'btn', method: :post%></td>
+          <%= link_to 'Deploy', project_environment_deployments_path(@project,environment) ,:class=>'btn', method: :post%></td>
     <%#end%>
-  </tr>
-  <% i += 1 %>
-<% end %>
+      </tr>
+      <% i += 1 %>
+    <% end %>
   <%else%>
-  <tr>
-    <td colspan="5" style="color: blue;">Sorry, No Environments in this Project.</td>
-  </tr>
+    <tr>
+      <td colspan="5" style="color: blue;">Sorry, No Environments in this Project.</td>
+    </tr>
   <%end%>
 </table>
 <br />
