--- a/app/views/environments/edit.html.erb
+++ b/app/views/environments/edit.html.erb
@@ -19,7 +19,7 @@
     var amiId = <%= instance.ami_id.nil? ? 'null' : instance.ami_id %>;
     var instanceType = <%= instance.instance_type_id.nil? ? 'null' : instance.instance_type_id %>;
     var configAttributes = JSON.parse('<%= instance.config_attributes.html_safe %>');
-    var newInstance = addInstanceCloneToGraph({ left: xpos, top: ypos });
+    var newInstance = addInstanceCloneToGraph(instanceId);
     newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId,configAttributes:configAttributes});
     instances[instanceId] = { instance: newInstance, parents: parents };
   <% end %>
