--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,9 +1,9 @@
 <div style="float:right;"><%= link_to 'All Projects', projects_path ,:class=>"btn"%></div>
 <br/><br/>
 <p id="notice"><%= notice %></p>
-<div style="background-color: lavender;">
+<div class="well">
   <div style="margin-left: 10px;">
-<h3 style="float:left;text-decoration: underline;font-family: bold;"><%= @project.name %></h3>&nbsp;&nbsp;
+<h3 style="float:left;text-decoration: none;font-family: bold;"><%= @project.name %></h3>&nbsp;&nbsp;
 <%= link_to 'Edit', edit_project_path ,:class=>"btn" ,:style=>"float:none;margin-top:14px;"%>
 <br /><br />
 <div class="clear"></div>
