--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,9 +22,8 @@
     &nbsp;&nbsp;<span><%= @project.repo_url %></span>
   </div>
   <br/>
-   <br/>
    <div>
-    <span style="display: inline-block;width: 115px;">Frame Work</span>:
+    <span style="display: inline-block;width: 115px;">Framework</span>:
     &nbsp;&nbsp;<span><%= @project.frame_work %></span>
   </div>
    <br />
