Fixed an issue trying to get the status of stack , added a background , changed table layout

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,6 @@
 @import "bootstrap";
-body { padding-top: 60px; }
+body {
+  padding-top: 60px;
+  background-image:image-url('body-bkg-pattern.png');
+}
 //@import "bootstrap-responsive";
