--- a/app/views/projects/_project_environments.html.erb
+++ b/app/views/projects/_project_environments.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-striped table-bordered table-condensed">
+<table class="table table-striped">
   <tr>
     <th style="text-align: center;">Status</th>
     <th>Name</th>
@@ -10,7 +10,7 @@
   <%if @environments.present? %>
     <% @environments.each do |environment| %>
       <tr>
-        <td style="text-align: center;"><a id="stack-status" data-graph-id="<%=environment.id%>" href="javascript:void(0);"><%= status_image(environment.status(current_user.aws_access_key, current_user.aws_secret_key)) %></a></td>
+        <td style="text-align: center;"><div id="stack-status" data-graph-id="<%=environment.id%>" href="javascript:void(0);"><%= status_image(environment.status(current_user.aws_access_key, current_user.aws_secret_key)) %></div></td>
         <td><%= environment.name %></td>
         <td><%= text_field_tag 'branch' ,environment.branch, id: "branch_#{environment.id}" %></td>
         <td><%= check_box_tag 'db_migrate','',environment.db_migrate, id: "db_migrate_#{environment.id}" %></td>
