--- a/app/views/environments/edit.html.erb
+++ b/app/views/environments/edit.html.erb
@@ -21,7 +21,7 @@
     var configAttributes = JSON.parse('<%= instance.config_attributes.html_safe %>');
     var newInstance = addInstanceCloneToGraph(instanceId);
     newInstance.instance({xpos: xpos, ypos: ypos, label: label, resourceType: resourceType, amiId: amiId, InstanceType:instanceType, instanceId: instanceId,configAttributes:configAttributes});
-    instances[instanceId] = { instance: newInstance, parents: parents };
+    instances[instanceId] = { instance: newInstance, parents: parents,configAttributes:configAttributes };
   <% end %>
   //Loads saved connections
   jsPlumb.ready(function(){
