--- a/app/views/environments/_dialogs.html.erb
+++ b/app/views/environments/_dialogs.html.erb
@@ -84,6 +84,52 @@
     <% end %>
 </div>
 
+<!-- JAVA resource added -->
+<div id="java-configuration" class="modal hide fade in instance-config" style="display: none; ">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>JAVA instance configuration</h3>
+  </div>
+  <div class="modal-body">
+    <div id="java-config-error-messages"></div>
+    <%= simple_form_for Instance.new, url: '', html: { id: 'java-config-frm'} do |f|%>
+      <%= f.input :label, input_html: { id: 'java_label', class: 'instance_label'} %>
+      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'java_instance_type_id'} %>
+      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'java_ami_id'%>
+      <%= hidden_field_tag :java_parents_list, ResourceType.find_by_name("JAVA").parents_list, :id => 'java_parents_list'%>
+      <%= f.hidden_field(:xpos, id: 'java_xpos')%>
+      <%= f.hidden_field(:ypos, id: 'java_ypos')%>
+  </div>
+  <div class="modal-footer">
+    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+  </div>
+    <% end %>
+</div>
+
+<!-- PHP resource added -->
+<div id="php-configuration" class="modal hide fade in instance-config" style="display: none; ">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>PHP instance configuration</h3>
+  </div>
+  <div class="modal-body">
+    <div id="php-config-error-messages"></div>
+    <%= simple_form_for Instance.new, url: '', html: { id: 'php-config-frm'} do |f|%>
+      <%= f.input :label, input_html: { id: 'php_label', class: 'instance_label'} %>
+      <%= f.input :instance_type_id, label: 'Size', collection: InstanceType.get_select_collection('EC2'), input_html: {id: 'php_instance_type_id'} %>
+      <%= hidden_field_tag :ami_id, Ami.first.id, :id => 'php_ami_id'%>
+      <%= hidden_field_tag :php_parents_list, ResourceType.find_by_name("PHP").parents_list, :id => 'php_parents_list'%>
+      <%= f.hidden_field(:xpos, id: 'php_xpos')%>
+      <%= f.hidden_field(:ypos, id: 'php_ypos')%>
+  </div>
+  <div class="modal-footer">
+    <%= f.button :submit, 'Apply', class: "btn btn-success instance-config-submit" %>
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+  </div>
+    <% end %>
+</div>
+
 <!-- Mysql resource added Needs to be changed-->
 <div id="mysql-configuration" class="modal hide fade in instance-config" style="display: none; ">
   <div class="modal-header">
